# FPGA-SHA256

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  README.md  benchmark.sh  device_info.txt  device_interface.cpp  enable_manual_run.sh  exports.sh  gdb.sh  gen_hundred_gb.sh  generate_random_passwords.py  ha.vcd  ha.vdhl  ha_tb.vdhl  host_main.cpp  load_ocl_to_aws.txt  main_cpu.cpp  o.csv  password.txt  run_make.sh  source_files.sh  test  vendor_exports.sh
charts/: charts.py  charts2.py  output.csv  output.numbers  reference.csv  requriments.txt  table1.tex
cpu/: CMakeLists.txt  Makefile  SHA_256_hak.cpp  application.cpp  application.py  application_opt.cpp  gen_password_size.sh  gen_passwords.sh  generate_random_passwords.py  hashed_passwords.txt  old  password.txt  random_passwords.txt  sha256.cpp  sha256.hpp  sha_preprocess.cpp  sha_preprocess.hpp  verify  verify.cpp  verify.hpp
device/: defs.hpp  device_information.cpp  device_information.hpp  device_interface.cpp  device_interface.hpp  device_kernel.cl  double_buffer.cpp  double_buffer.hpp
host/: Makefile  dummy_make.sh  generate_random_passwords.py  host_benchmark.cpp  host_sha256.cpp  host_sha256.hpp  sha_preprocess.cpp  sha_preprocess.hpp  verify.cpp  verify.hpp
interface/: AWS_Makefile  CMakeLists.txt  Makefile  aws_dram.hex  aws_install_script.sh  cpu_dummy.cpp  defs.hpp  device_interface.cpp  device_interface.hpp  device_kernel.cl  double_buffer.cpp  double_buffer.hpp  fpga.cpp  fpga.hpp  fpga_main.cpp  how_to_run_aws.txt  local_dram.hex  main.cpp  utils.cpp  utils.hpp
kernels/: sha256.c
(+31 files in other folders)
